# AstraMolecula

./: .backend.log.swo  .backend.log.swp  .dockerignore  .env  .gitattributes  .gitignore  API_CLEANUP_SUMMARY.md  API_Documentation.md  ARCHITECTURE_CHANGES.md  DATABASE_ID_REDESIGN_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  README2.md  REFACTORING.md  aliyun_setup.sh  async_task_processor.py  check_database_structure.sql  check_imports.py  check_versions.py  checkvocal.py  config.py  database_schema_complete.sql  database_schema_update.sql  dbREADME.md  debug_token.py  deploy  deploy.sh  docking_api_example.json  env.yml  environment-portable.yml  environment.yaml  environment.yml  fix_guide.py  fix_mmpdb_guide.py  fix_pdbqt.py  fix_tasks_table.sql  fragment_processor.py  main.py  manual_requirements.txt  (+28 more)
.github/workflows/: github-actions-demo.yml
Vina/: prepare_receptor.py  vina_workflow.py
cicd/: README.md
cicd/docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
cicd/docs/: DEPLOYMENT_GUIDE.md
cicd/scripts/: aliyun_setup.sh  deploy.sh  docker-manage.sh  quick_config.sh  setup_autossh.sh  ssl_setup.sh  start_AstraMolecula.sh  start_docker.sh  start_docking_service.sh  test_connection.sh
common/: utils.py
config/: __init__.py  api_config.py  cli_opts.py  logging_config.py  ml_config.py  settings.py  settings.yaml
configuration/: config_default.py  opts.py
database/: config.py  db.py  init_database.sh  init_database.sql  init_database_postgres.sql
database/migrations/: 001_add_user_external_fields.sql  (+2 more)
docs/: ALANSCIENTIFIC_UPLOAD_BUG_ANALYSIS.md  API_Documentation.md  AWS_NGINX_CORS_CONFIG.md  DATABASE_SETUP.md  HYBRID_CLOUD_TOOLING_PLAN.md  LOGGING_UPGRADE.md  LOGIN_401_BUG_ANALYSIS.md  NETWORK_ARCHITECTURE.md  PEPTIDE_DOWNLOAD_API.md  PUBLIC_PEPTIDE_API.md  SEAWEEDFS_MIGRATION_COMPLETE.md  TASK_API_OPTIMIZATION.md  THIRD_PARTY_INTEGRATION.md  cost_calculaltion_for_peptide.md  cost_calculation_system.md  docking_csv_download_selection_feature.md  log-viewer-guide.md  molecular-generation-landscape-2026.md  object_storage_migration_plan.md  peptide_cost_calculation_system.md  performance_optimization_guide.md  seaweedfs_migration_plan.md  seaweedfs_unified_storage_solution.md  smiles-transformer-architecture.md  smiles-transformer-known-issues.md  task-scheduling-hardening.md
models/: dataset.py
my_toolsets/: pyproject.toml  setup.py
my_toolsets/my_toolset/: pharmacophore.py
my_toolsets/my_toolset.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
preprocess/: data_preparation.py  property_change_encoder.py
requests/: basic_request.py
resource/: 70.csv  vina_box.json  vina_box.json.backup  vocab.pkl
responses/: basic_response.py
routers/: admin.py  auth.py  docking.py  logs.py  payments.py  peptide.py  public.py  smiles.py  tasks.py  uploads.py  user_migration.py
scripts/: README.md  migrate_database.py  peptide_api_client.py  peptide_examples.py
security/: auth.py
static/: log-viewer.html
test/: check_model.py  listtask_test.py  simple_debug.py  smiles2png_test.py  test_api.py  test_dock_result.py  test_docking.py  test_full_peptide_workflow.py  test_get_molecules.py  test_peptide_download.py  test_peptide_json_result.py  test_peptide_optimization.py  test_protein_path_feature.py  test_sdf_api.py  test_task.py  test_third_party_service.py  test_upload.py  test_vina.py
tests/: __init__.py
utils/: combine_mol.py  dataset.py  docking_cost_calculator.py  format_converter.py  generate.py  log.py  peptide_cost_calculator.py  sascorer.py  tools.py
(+1950 files in other folders)
